--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -363,7 +363,7 @@ pipelines:
                 - export ELB_NAME=$(aws cloudformation describe-stack-resources --stack-name "${STACK_NAME}" | jq -c '.StackResources | .[] | select(.LogicalResourceId=="LoadBalancer") | .PhysicalResourceId' | tr -d '"')
                 - echo $ELB_NAME
                 - aws elb wait any-instance-in-service --load-balancer-name $ELB_NAME
-                - echo "${SERVICEURL}"
-                - curl --fail ${SERVICEURL}/status
+                - echo "${SERVICE_URL}"
+                - curl --fail ${SERVICE_URL}/status
               artifacts:
                 - quickstarts/quickstart-atlassian-bitbucket/taskcat_outputs/*
