--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -310,10 +310,10 @@ pipelines:
                 - taskcat -n -c ci/taskcat-ci.yml -t taskcat-ci-run=true -t taskcat-ci-run-id=tcat-jira-${BITBUCKET_BUILD_NUMBER} -t override_periodic_cleanup=true
                 - export STACK_NAME=$(aws cloudformation describe-stacks  | jq -c --arg build_tag_id "tcat-jira-${BITBUCKET_BUILD_NUMBER}" '.Stacks | map( select( any(.Tags[]; .Key=="taskcat-ci-run-id" and .Value == $build_tag_id))) | .[0] | .StackName' | tr -d '"')
                 - export SERVICE_URL=$(aws cloudformation describe-stacks --stack-name "$STACK_NAME" | jq -c '.Stacks | .[].Outputs | .[] | select(.OutputKey=="ServiceURL") | .OutputValue' | tr -d '"')
+                - echo "${SERVICE_URL}"
                 - export ELB_NAME=$(aws cloudformation describe-stack-resources --stack-name "${STACK_NAME}" | jq -c '.StackResources | .[] | select(.LogicalResourceId=="LoadBalancer") | .PhysicalResourceId' | tr -d '"')
                 - echo $ELB_NAME
                 - aws elb wait any-instance-in-service --load-balancer-name $ELB_NAME
-                - echo "${SERVICE_URL}"
                 - curl --fail ${SERVICE_URL}/status
               artifacts:
                 - quickstarts/quickstart-atlassian-jira/taskcat_outputs/*
@@ -341,10 +341,10 @@ pipelines:
                 - taskcat -n -c ci/taskcat-ci.yml -t taskcat-ci-run=true -t taskcat-ci-run-id=tcat-confluence-${BITBUCKET_BUILD_NUMBER} -t override_periodic_cleanup=true
                 - export STACK_NAME=$(aws cloudformation describe-stacks  | jq -c --arg build_tag_id "tcat-confluence-${BITBUCKET_BUILD_NUMBER}" '.Stacks | map( select( any(.Tags[]; .Key=="taskcat-ci-run-id" and .Value == $build_tag_id))) | .[0] | .StackName' | tr -d '"')
                 - export SERVICE_URL=$(aws cloudformation describe-stacks --stack-name "$STACK_NAME" | jq -c '.Stacks | .[].Outputs | .[] | select(.OutputKey=="ServiceURL") | .OutputValue' | tr -d '"')
-                - export ELB_NAME=$(aws cloudformation describe-stack-resources --stack-name "${STACK_NAME}" | jq -c '.StackResources | .[] | select(.LogicalResourceId=="LoadBalancer") | .PhysicalResourceId' | tr -d '"')
-                - echo $ELB_NAME
-                - aws elb wait any-instance-in-service --load-balancer-name $ELB_NAME
                 - echo "${SERVICE_URL}"
+                - export TGARN=$(aws cloudformation describe-stacks --stack-name "${STACK_NAME}" | jq '.Stacks[0].Outputs'|jq '.[] | select(.OutputKey=="ConfluenceTargetGroupARN")|.OutputValue'|tr -d '"')
+                - echo $TGARN
+                - aws elbv2 wait target-in-service --target-group-arn $TGARN
                 - curl --fail ${SERVICE_URL}/status
               artifacts:
                 - quickstarts/quickstart-atlassian-confluence/taskcat_outputs/*
@@ -376,6 +376,7 @@ pipelines:
                 - echo $ELB_NAME
                 - aws elb wait any-instance-in-service --load-balancer-name $ELB_NAME
                 - echo "${SERVICE_URL}"
+                - sleep 10
                 - curl --fail ${SERVICE_URL}/status
               artifacts:
                 - quickstarts/quickstart-atlassian-bitbucket/taskcat_outputs/*
