ITOPS-1406 adding permissions for local ansible to manage own security groups. Lots of cfn-lint fixes

--- a/quickstarts/quickstart-confluence-master.template.yaml
+++ b/quickstarts/quickstart-confluence-master.template.yaml
@@ -1641,7 +1641,7 @@ Resources:
       StorageType: !If [DBProvisionedIops, io1, gp2]
       Tags:
         - Key: Name
-          Value: !Sub ["${StackName} Confluence PostgreSQL Database", StackName: !Ref 'AWS::StackName']
+          Value: !Sub "${AWS::StackName} Confluence PostgreSQL Database"
       VPCSecurityGroups: [!Ref SecurityGroup]
   DBSubnetGroup:
     Type: AWS::RDS::DBSubnetGroup
