--- a/templates/ConfluenceServerClone.template.yaml
+++ b/templates/ConfluenceServerClone.template.yaml
@@ -378,7 +378,6 @@ Parameters:
       - i3.4xlarge
       - i3.8xlarge
       - i3.16xlarge
-      - i3.metal
       - m4.large
       - m4.xlarge
       - m4.2xlarge
@@ -574,8 +573,6 @@ Conditions:
     !Not [!Equals [!Ref HostedZone, '']]
   UseSubDomainName:
     !Not [!Equals [!Ref SubDomainName, '']]
-  GovCloudCondition:
-    !Equals [!Ref 'AWS::Region', 'us-gov-west-1']
 Mappings:
   AWSInstanceType2Arch:
     c4.xlarge:
@@ -660,9 +657,6 @@ Mappings:
       Arch: HVM64
       Jvmheap: 12288m
     i3.16xlarge:
-      Arch: HVM64
-      Jvmheap: 12288m
-    i3.metal:
       Arch: HVM64
       Jvmheap: 12288m
     m4.large:
@@ -901,7 +895,9 @@ Resources:
           PolicyDocument:
             Version: 2012-10-17
             Statement:
-              - Action: ['ec2:DescribeInstances']
+              - Action:
+                - 'ec2:DescribeInstances'
+                - 'ec2:DescribeSecurityGroups'
                 Effect: Allow
                 Resource: ['*']
               - Action: ['s3:ListBucket']
@@ -925,6 +921,14 @@ Resources:
               - Action: ['s3:PutObjectAcl']
                 Effect: Allow
                 Resource: ['arn:aws:s3:::btf-analytics/*']
+              - Action:
+                  - 'ec2:AuthorizeSecurityGroupIngress'
+                Condition:
+                  StringEquals:
+                    'ec2:ResourceTag/Name':
+                    - !Sub '${AWS::StackName} sg'
+                Effect: Allow
+                Resource: ['*']
   ConfluenceServerInstanceProfile:
     Type: AWS::IAM::InstanceProfile
     Properties:
@@ -934,10 +938,10 @@ Resources:
   ConfluenceServerGroup:
     Type: AWS::AutoScaling::AutoScalingGroup
     Properties:
-      DesiredCapacity: 1
+      DesiredCapacity: '1'
       LaunchConfigurationName: !Ref ConfluenceServerLaunchConfig
-      MaxSize: 1
-      MinSize: 1
+      MaxSize: '1'
+      MinSize: '1'
       TargetGroupARNs: [!Ref ConfluenceServerTargetGroup]
       VPCZoneIdentifier: !Ref InternalSubnets
       Tags:
@@ -948,7 +952,6 @@ Resources:
     Type: AWS::AutoScaling::LaunchConfiguration
     DependsOn:
       - NFSServer
-      - DB
     Metadata:
       AWS::CloudFormation::Init:
         configSets:
@@ -1137,7 +1140,7 @@ Resources:
       SnapshotId: !Ref EBSSnapshotId
       Tags:
         - Key: Name
-          Value: "${AWS::StackName} Confluence DR shared-home volume"
+          Value: !Sub "${AWS::StackName} Confluence DR shared-home volume"
         - Key: Application
           Value: !Ref AWS::StackId
       VolumeType: gp2
@@ -1190,7 +1193,7 @@ Resources:
         - GroupSet:
             - !Ref SecurityGroup
           AssociatePublicIpAddress: false
-          DeviceIndex: 0
+          DeviceIndex: '0'
           DeleteOnTermination: true
           SubnetId: !Select [0, !Ref InternalSubnets]
       UserData:
@@ -1225,7 +1228,7 @@ Resources:
       Comment: Route53 A rec for the NFS
       Name: !Sub "${AWS::StackName}.efs.${HostedZone}"
       Type: A
-      TTL: 900
+      TTL: '900'
       ResourceRecords:
         - !GetAtt NFSServer.PrivateIp
 # Database
@@ -1237,7 +1240,7 @@ Resources:
       DBSubnetGroupName: !Ref DBSubnetGroup
       DBSnapshotIdentifier: !Ref DBSnapshotName
       Engine: postgres
-      EngineVersion: 9.6
+      EngineVersion: '9.6'
       Iops: !If [DBProvisionedIops, !Ref DBIops, !Ref 'AWS::NoValue']
       MasterUsername: postgres
       MasterUserPassword: !If [DoSetDBMasterUserPassword, !Ref DBMasterUserPassword, !Ref 'AWS::NoValue']
@@ -1260,7 +1263,7 @@ Resources:
       Comment: Route53 cname for the RDS
       Name: !Sub "${AWS::StackName}.db.${HostedZone}"
       Type: CNAME
-      TTL: 900
+      TTL: '900'
       ResourceRecords:
         - !GetAtt DB.Endpoint.Address
 # Loadbalancer
@@ -1269,7 +1272,7 @@ Resources:
     Properties:
       LoadBalancerAttributes:
         - Key: idle_timeout.timeout_seconds
-          Value: 300
+          Value: '300'
       Scheme: !Ref LoadBalancerScheme
       SecurityGroups: [!Ref SecurityGroup]
       Subnets: !Ref ExternalSubnets
@@ -1302,7 +1305,7 @@ Resources:
         - SubDomainName: !If [UseSubDomainName, !Ref 'SubDomainName', !Ref 'AWS::StackName']
           HostedZone: !Ref 'HostedZone'
       Type: CNAME
-      TTL: 900
+      TTL: '900'
       ResourceRecords:
         - !GetAtt LoadBalancer.DNSName
   ConfluenceServerTargetGroup:
@@ -1316,20 +1319,18 @@ Resources:
       HealthCheckTimeoutSeconds: 10
       HealthyThresholdCount: 2
       Matcher:
-        HttpCode: 200
+        HttpCode: '200'
       HealthCheckPath: !If [UseContextPath, !Sub "${TomcatContextPath}/status", '/status']
       HealthCheckPort: !Ref TomcatDefaultConnectorPort
       HealthCheckProtocol: HTTP
       TargetGroupAttributes:
         - Key: stickiness.enabled
-          Value: true
+          Value: 'true'
         - Key: stickiness.type
           Value: lb_cookie
       Tags:
         - Key: Name
           Value: ConfluenceServerTargetGroup
-    DependsOn:
-      - LoadBalancer
   SecurityGroup:
     Type: AWS::EC2::SecurityGroup
     Properties:
@@ -1355,7 +1356,7 @@ Resources:
     Type: AWS::EC2::SecurityGroupIngress
     Properties:
       GroupId: !Ref SecurityGroup
-      IpProtocol: -1
+      IpProtocol: '-1'
       FromPort: -1
       ToPort: -1
       SourceSecurityGroupId: !Ref SecurityGroup
