--- a/templates/JiraDataCenterClone.template.yaml
+++ b/templates/JiraDataCenterClone.template.yaml
@@ -483,8 +483,8 @@ Parameters:
       - Software
   JiraVersion:
     Default: 7.13.1
-    AllowedPattern: '(\d+\.\d+\.\d+(-?.*))'
-    ConstraintDescription: Must be a valid Jira version number, for example 7.13.1. Find valid versions at https://jira.atlassian.com/display/DOC/Jira+Release+Notes. If using Jira Service Desk only, must be the Service Desk version number corresponding to the Jira version you require (found at https://marketplace.atlassian.com/apps/1213632/jira-service-desk/version-history).
+    AllowedPattern: '(\d+\.\d+\.\d+(-?.*))|(latest)'
+    ConstraintDescription: Must be a valid Jira version number or 'latest', for example 7.13.1. Find valid versions at https://jira.atlassian.com/display/DOC/Jira+Release+Notes. If using Jira Service Desk only, must be the Service Desk version number corresponding to the Jira version you require (found at https://marketplace.atlassian.com/apps/1213632/jira-service-desk/version-history).
     Description: The version of Jira to install
     Type: String
   JvmHeapOverride:
